--- a/style.css
+++ b/style.css
@@ -1,43 +1,102 @@
-@import url(https://fonts.google.com/specimen/Kumbh+Sans);
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
 
 
 body {
-    background-color: #19b1be;
-    background-image: url(./images/bg-pattern-top.svg), 
-    url(images/bg-pattern-bottom.svg);
-    background-position: right 45vw bottom 45vh, 45vw 45vh;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    font-family: "Kumbh Sans", sans-serif;
-    overflow: hidden;
-  }
+     background-color: #19b1be;
+     background-image: url(./images/bg-pattern-top.svg), 
+     url(images/bg-pattern-bottom.svg);
+     background-position: right 45vw bottom 45vh, 45vw 45vh;
+     background-repeat: no-repeat;
+     display: flex;
+     flex-direction: row;
+     justify-content: center;
+     align-items: center;
+     min-height: 100vh;
+     font-family: "Kumbh Sans", sans-serif;
+     overflow: hidden;
+ }
 
 
  .card {
-    color: rgb(7, 0, 0);
-    background-color: #faf9f9;
-    border-radius: 10px;
-    width: 320px;
-    height: 350px;
-    display: flex;
-    text-align: center;
-    flex-direction: column;
-    margin: 0;
+     overflow: hidden;
+     color: rgb(7, 0, 0);
+     background-color: #faf9f9;
+     border-radius: 18px;
+     width: 320px;
+     display: flex;
+     flex-wrap: wrap;
+     text-align: center;
+     margin: 0;
+     box-shadow: 0 3px 6px rgba(0, 0, 0, .2);
+ }
+
+ .card_header {
+     position: relative;
+     display: block;
+     overflow: hidden;
+     width: 100%;
+     padding-bottom: 10px;
+     border-bottom: 1px solid #EDEDED;
+ }
+
+ header .card_header {
+     height: 120px;
+     width: 320px;
+     border-radius: 10px 10px 0px 0px;
+     background-color:  hsl(185, 75%, 39%);
+     background-image: url("images/bg-pattern-card.svg");
   }
 
- header {
-    height: 140px;
-    width: 320px;
-    border-radius: 10px 10px 0px 0px;
-    background-color: aqua;
-    background-image: url("images/bg-pattern-card.svg");
-  }
+ header .profile-pic{
+     width: 96px;
+     height: 96px;
+     margin-top: -50px;
+     position:relative;
+     border-radius: 50%;
+     border: solid 5px whitesmoke;
+     
+ }
+ 
+ header h1 {
+     font-size: 24px;
+     font-weight: 200;
+     color: hsl(227, 10%, 46%);
+     margin-bottom: 10px;
+
+ }
+ header h1 strong{
+     font-weight: 600;
+     color: hsl(229, 23%, 23%);
+ }
+
+ header .location {
+     font-size: 16px;
+     font-weight: 200;
+     color: hsl(227, 10%, 46%);
+ }
+
+ .social_info {
+     display: block;
+     flex-grow: 1;
+     padding: 20px 0;
+ }
+ .social_info p {
+     display:block;
+     font-weight: 600;
+     color: hsl(229, 23%, 23%);
+     letter-spacing: 2px;
+     margin: 0 auto 5px;
+ }
+
+ .social_info label {
+     font-weight: 200;
+     color: hsl(227, 10%, 46%);
+     font-size: 12px;
+ }
 
 
+
+/*
 img{
     position: relative;
     top: 64%; 
@@ -52,13 +111,34 @@ h1{
 }
 
 .social_info{
+    margin-top: 10px;
+    border-top: 10px rgb(7, 0, 0);
+    list-style: none;
+    float:left;
+    margin-right:10px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     position: relative;
-    top: 60%; 
+    top: 40%; 
 }
+.social_info_value{
+    float:left;
+    font-weight: 200;
+    font-size: 8.5px;
+    letter-spacing: 2px;
+    position: relative;
+    top: -5px; 
+}
+/*.social_info_value{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+    top: 40%;
+}*/
 /*.background{
     margin: 20px 0;
     width: 100%;
